// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSFiles Cropped 1`] = `
<div
  className="slds-p-around_medium"
>
  <ul
    className="slds-grid slds-grid_pull-padded"
    id="files-with-crop-example"
  >
    <li
      className="slds-p-horizontal_xx-small slds-size_1-of-3 slds-medium-size_1-of-4"
    >
      <div
        className="slds-file slds-file_card slds-has-title"
        id="file-crop-1-1"
      >
        <figure>
          <a
            className="slds-file__crop slds-file__crop_1-by-1"
            href="#"
            onClick={[Function]}
          >
            <span
              className="slds-assistive-text"
            >
              Preview:
            </span>
            <img
              alt="Proposal.pdf"
              src="/assets/images/placeholder-img@16x9.jpg"
            />
          </a>
          <figcaption
            className="slds-file__title slds-file__title_card"
          >
            <div
              className="slds-media__figure slds-line-height_reset"
            >
              <span
                className="slds-icon_container"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon_x-small"
                >
                  <use
                    href="/assets/icons/doctype-sprite/svg/symbols.svg#pdf"
                  />
                </svg>
                
              </span>
            </div>
            <div
              className="slds-media__body"
            >
              <span
                className="slds-file__text slds-truncate"
                title="Proposal.pdf"
              >
                Proposal.pdf
              </span>
            </div>
          </figcaption>
        </figure>
      </div>
    </li>
    <li
      className="slds-p-horizontal_xx-small slds-size_1-of-3 slds-medium-size_1-of-4"
    >
      <div
        className="slds-file slds-file_card slds-has-title"
        id="file-crop-16-9"
      >
        <figure>
          <a
            className="slds-file__crop slds-file__crop_16-by-9"
            href="#"
            onClick={[Function]}
          >
            <span
              className="slds-assistive-text"
            >
              Preview:
            </span>
            <img
              alt="Proposal.pdf"
              src="/assets/images/placeholder-img@16x9.jpg"
            />
          </a>
          <figcaption
            className="slds-file__title slds-file__title_card"
          >
            <div
              className="slds-media__figure slds-line-height_reset"
            >
              <span
                className="slds-icon_container"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon_x-small"
                >
                  <use
                    href="/assets/icons/doctype-sprite/svg/symbols.svg#pdf"
                  />
                </svg>
                
              </span>
            </div>
            <div
              className="slds-media__body"
            >
              <span
                className="slds-file__text slds-truncate"
                title="Proposal.pdf"
              >
                Proposal.pdf
              </span>
            </div>
          </figcaption>
        </figure>
      </div>
    </li>
    <li
      className="slds-p-horizontal_xx-small slds-size_1-of-3 slds-medium-size_1-of-4"
    >
      <div
        className="slds-file slds-file_card slds-has-title"
        id="file-crop-4-3"
      >
        <figure>
          <a
            className="slds-file__crop slds-file__crop_4-by-3"
            href="https://example.com"
            onClick={[Function]}
          >
            <span
              className="slds-assistive-text"
            >
              Preview:
            </span>
            <img
              alt="Proposal.pdf"
              src="/assets/images/placeholder-img@16x9.jpg"
            />
          </a>
          <figcaption
            className="slds-file__title slds-file__title_card"
          >
            <div
              className="slds-media__figure slds-line-height_reset"
            >
              <span
                className="slds-icon_container"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon_x-small"
                >
                  <use
                    href="/assets/icons/doctype-sprite/svg/symbols.svg#pdf"
                  />
                </svg>
                
              </span>
            </div>
            <div
              className="slds-media__body"
            >
              <span
                className="slds-file__text slds-truncate"
                title="Proposal.pdf"
              >
                Proposal.pdf
              </span>
            </div>
          </figcaption>
        </figure>
      </div>
    </li>
  </ul>
</div>
`;

exports[`DOM snapshots SLDSFiles Default 1`] = `
<div
  className="slds-p-around_medium"
>
  <ul
    className="slds-grid slds-grid_pull-padded"
    id="files-default-example"
  >
    <li
      className="slds-p-horizontal_xx-small slds-size_1-of-3 slds-medium-size_1-of-4"
    >
      <div
        className="slds-file slds-file_card slds-has-title"
        id="file-default-example"
      >
        <figure>
          <a
            className="slds-file__crop slds-file__crop_16-by-9"
            href="#"
            onClick={[Function]}
          >
            <span
              className="slds-assistive-text"
            >
              Preview:
            </span>
            <img
              alt="Placeholder image"
              src="/assets/images/placeholder-img@16x9.jpg"
            />
          </a>
          <figcaption
            className="slds-file__title slds-file__title_card"
          >
            <div
              className="slds-media__figure slds-line-height_reset"
            >
              <span
                className="slds-icon_container"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon_x-small"
                >
                  <use
                    href="/assets/icons/doctype-sprite/svg/symbols.svg#pdf"
                  />
                </svg>
                
              </span>
            </div>
            <div
              className="slds-media__body"
            >
              <span
                className="slds-file__text slds-truncate"
                title="Proposal.pdf"
              >
                Proposal.pdf
              </span>
            </div>
          </figcaption>
        </figure>
      </div>
    </li>
  </ul>
</div>
`;

exports[`DOM snapshots SLDSFiles Loading 1`] = `
<div
  className="slds-p-around_medium"
>
  <ul
    className="slds-grid slds-grid_pull-padded"
    id="files-loading-example"
  >
    <li
      className="slds-p-horizontal_xx-small slds-size_1-of-3 slds-medium-size_1-of-4"
    >
      <div
        className="slds-file slds-file_card"
        id="file-without-title-loading"
      >
        <figure>
          <a
            className="slds-file__crop slds-file__crop_16-by-9"
            href="#"
            onClick={[Function]}
          >
            <span
              className="slds-assistive-text"
            >
              Preview:
            </span>
            <div
              className="slds-spinner_container"
              style={
                Object {
                  "zIndex": "1",
                }
              }
            >
              <div
                aria-hidden="false"
                className="slds-spinner slds-spinner_medium"
                role="status"
              >
                <span
                  className="slds-assistive-text"
                >
                  loading
                </span>
                <div
                  className="slds-spinner__dot-a"
                />
                <div
                  className="slds-spinner__dot-b"
                />
              </div>
            </div>
          </a>
        </figure>
      </div>
    </li>
    <li
      className="slds-p-horizontal_xx-small slds-size_1-of-3 slds-medium-size_1-of-4"
    >
      <div
        className="slds-file slds-file_card slds-has-title"
        id="file-with-title-loading"
      >
        <figure>
          <a
            className="slds-file__crop slds-file__crop_16-by-9"
            href="#"
            onClick={[Function]}
          >
            <span
              className="slds-assistive-text"
            >
              Preview:
            </span>
            <div
              className="slds-spinner_container"
              style={
                Object {
                  "zIndex": "1",
                }
              }
            >
              <div
                aria-hidden="false"
                className="slds-spinner slds-spinner_medium"
                role="status"
              >
                <span
                  className="slds-assistive-text"
                >
                  loading
                </span>
                <div
                  className="slds-spinner__dot-a"
                />
                <div
                  className="slds-spinner__dot-b"
                />
              </div>
            </div>
          </a>
          <figcaption
            className="slds-file__title slds-file__title_card"
          >
            <div
              className="slds-media__figure slds-line-height_reset"
            >
              <span
                className="slds-icon_container"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon_x-small"
                >
                  <use
                    href="/assets/icons/doctype-sprite/svg/symbols.svg#image"
                  />
                </svg>
                
              </span>
            </div>
            <div
              className="slds-media__body"
            >
              <span
                className="slds-file__text slds-truncate"
                title="Proposal.pdf"
              >
                Proposal.pdf
              </span>
            </div>
          </figcaption>
        </figure>
      </div>
    </li>
  </ul>
</div>
`;

exports[`DOM snapshots SLDSFiles w/ Actions 1`] = `
<div
  className="slds-p-around_medium"
>
  <ul
    className="slds-grid slds-grid_pull-padded"
    id="files-with-actions-example"
  >
    <li
      className="slds-p-horizontal_xx-small slds-size_1-of-3 slds-medium-size_1-of-4"
    >
      <div
        className="slds-file slds-file_card"
        id="file-without-title"
      >
        <figure>
          <a
            className="slds-file__crop slds-file__crop_16-by-9"
            href="#"
            onClick={[Function]}
          >
            <span
              className="slds-assistive-text"
            >
              Preview:
            </span>
            <img
              alt="Proposal.pdf"
              src="/assets/images/placeholder-img@16x9.jpg"
            />
          </a>
        </figure>
        <style>
          
					.dsr-file__more-actions-dropdown  ul.dropdown__list li.slds-dropdown__item &gt; a:before
					{ background: none; }
					.dsr-file__more-actions-dropdown  ul.dropdown__list li.slds-dropdown__item &gt; a:after
					{ background: none; }
					.dsr-file__more-actions &gt; button:first-child
					{ border-radius: 0 0.25rem 0.25rem 0!important;}
			
        </style>
        <div
          className="slds-file__title slds-file__title_scrim"
        >
          <div
            className="slds-file__actions-menu"
          >
            <div
              className="slds-button-group"
              role="group"
            >
              <button
                className="slds-button slds-button_icon slds-button_icon-inverse"
                disabled={false}
                onClick={[Function]}
                title="Download"
                type="button"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon_xx-small"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#download"
                    />
                  </svg>
                  <span
                    className="slds-assistive-text"
                  >
                    download
                  </span>
                </span>
              </button>
              <div
                className="slds-dropdown-trigger slds-dropdown-trigger_click dsr-file__more-actions"
                id="file-more-actions"
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseEnter={null}
                onMouseLeave={null}
              >
                <button
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="slds-button slds-button_icon slds-button_icon-inverse slds-button_icon-bare ignore-click-file-more-actions"
                  disabled={false}
                  onClick={[Function]}
                  tabIndex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-button__icon"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                    />
                  </svg>
                  <span
                    className="slds-assistive-text"
                  >
                    more actions
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      className="slds-p-horizontal_xx-small slds-size_1-of-3 slds-medium-size_1-of-4"
    >
      <div
        className="slds-file slds-file_card slds-has-title"
        id="file-with-title"
      >
        <figure>
          <a
            className="slds-file__crop slds-file__crop_16-by-9"
            href="https://example.com"
            onClick={[Function]}
          >
            <span
              className="slds-assistive-text"
            >
              Preview:
            </span>
            <img
              alt="Proposal.pdf"
              src="/assets/images/placeholder-img@16x9.jpg"
            />
          </a>
          <figcaption
            className="slds-file__title slds-file__title_card"
          >
            <div
              className="slds-media__figure slds-line-height_reset"
            >
              <span
                className="slds-icon_container"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon_x-small"
                >
                  <use
                    href="/assets/icons/doctype-sprite/svg/symbols.svg#pdf"
                  />
                </svg>
                
              </span>
            </div>
            <div
              className="slds-media__body"
            >
              <span
                className="slds-file__text slds-truncate"
                title="Proposal.pdf"
              >
                Proposal.pdf
              </span>
            </div>
          </figcaption>
        </figure>
        <style>
          
					.dsr-file__more-actions-dropdown  ul.dropdown__list li.slds-dropdown__item &gt; a:before
					{ background: none; }
					.dsr-file__more-actions-dropdown  ul.dropdown__list li.slds-dropdown__item &gt; a:after
					{ background: none; }
					.dsr-file__more-actions &gt; button:first-child
					{ border-radius: 0 0.25rem 0.25rem 0!important;}
			
        </style>
        <div
          className="slds-file__actions-menu"
        >
          <div
            className="slds-button-group"
            role="group"
          >
            <button
              className="slds-button slds-button_icon slds-button_icon-inverse"
              disabled={false}
              onClick={[Function]}
              title="Download"
              type="button"
            >
              <span>
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon_xx-small slds-icon-text-default"
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#download"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  download
                </span>
              </span>
            </button>
            <div
              className="slds-dropdown-trigger slds-dropdown-trigger_click dsr-file__more-actions"
              id="file-with-title-more-actions"
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseEnter={null}
              onMouseLeave={null}
            >
              <button
                aria-expanded={false}
                aria-haspopup={true}
                className="slds-button slds-button_icon slds-button_icon-bare ignore-click-file-with-title-more-actions"
                disabled={false}
                onClick={[Function]}
                tabIndex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  className="slds-button__icon"
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  more actions
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      className="slds-p-horizontal_xx-small slds-size_1-of-3 slds-medium-size_1-of-4"
    >
      <div
        className="slds-file slds-file_card"
        id="more-file-card"
      >
        <figure>
          <a
            className="slds-file__crop slds-file__crop_16-by-9"
            href="#"
            onClick={[Function]}
          >
            <div
              className="slds-file_overlay"
            />
            <span
              className="slds-assistive-text"
            >
              Preview:
            </span>
            <img
              alt="Show more files"
              src="/assets/images/placeholder-img@16x9.jpg"
            />
          </a>
          <figcaption
            className="slds-file__title slds-file__title_overlay slds-align_absolute-center slds-text-heading_large"
          >
            <div
              className="slds-media slds-media_small slds-media_center"
            >
              <div
                className="slds-media__figure slds-line-height_reset"
              />
              <div
                className="slds-media__body"
              >
                <span
                  className="slds-file__text slds-truncate"
                  title="22+"
                >
                  <span>
                    22+
                  </span>
                  <span
                    className="slds-assistive-text"
                  >
                    more files
                  </span>
                </span>
              </div>
            </div>
          </figcaption>
        </figure>
      </div>
    </li>
  </ul>
</div>
`;

exports[`DOM snapshots SLDSFiles w/ External Icon 1`] = `
<div
  className="slds-p-around_medium"
>
  <ul
    className="slds-grid slds-grid_pull-padded"
    id="files-with-external-icon-example"
  >
    <li
      className="slds-p-horizontal_xx-small slds-size_1-of-3 slds-medium-size_1-of-4"
    >
      <div
        className="slds-file slds-file_card slds-has-title"
        id="file-with-external-icon"
      >
        <figure>
          <a
            className="slds-file__crop slds-file__crop_16-by-9"
            href="#"
            onClick={[Function]}
          >
            <span
              className="slds-assistive-text"
            >
              Preview:
            </span>
            <span
              className="slds-file__icon slds-icon_container"
              title="Proposal.pdf"
            >
              <span
                className="slds-icon_container"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon"
                >
                  <use
                    href="/assets/icons/doctype-sprite/svg/symbols.svg#pdf"
                  />
                </svg>
                
              </span>
            </span>
          </a>
          <figcaption
            className="slds-file__title slds-file__title_card"
          >
            <div
              className="slds-media__figure slds-line-height_reset"
            >
              <span
                className="slds-icon_container"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon_x-small"
                >
                  <use
                    href="/assets/icons/doctype-sprite/svg/symbols.svg#pdf"
                  />
                </svg>
                
              </span>
            </div>
            <div
              className="slds-media__body"
            >
              <span
                className="slds-file__text slds-truncate"
                title="Proposal.pdf"
              >
                Proposal.pdf
              </span>
            </div>
          </figcaption>
        </figure>
        <div
          className="slds-file__external-icon"
        >
          <span
            className="slds-file__icon slds-icon_container"
          >
            <svg
              aria-hidden="true"
              className="slds-icon slds-icon-text-default"
            >
              <use
                href="/assets/icons/utility-sprite/svg/symbols.svg#salesforce1"
              />
            </svg>
            
          </span>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`DOM snapshots SLDSFiles w/o Image 1`] = `
<div
  className="slds-p-around_medium"
>
  <ul
    className="slds-grid slds-grid_pull-padded"
    id="files-with-no-image-example"
  >
    <li
      className="slds-p-horizontal_xx-small slds-size_1-of-3 slds-medium-size_1-of-4"
    >
      <div
        className="slds-file slds-file_card slds-has-title"
        id="file-with-no-image"
      >
        <figure>
          <a
            className="slds-file__crop slds-file__crop_16-by-9"
            href="#"
            onClick={[Function]}
          >
            <span
              className="slds-assistive-text"
            >
              Preview:
            </span>
            <span
              className="slds-file__icon slds-icon_container"
              title="Proposal.pdf"
            >
              <span
                className="slds-icon_container"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon"
                >
                  <use
                    href="/assets/icons/doctype-sprite/svg/symbols.svg#pdf"
                  />
                </svg>
                
              </span>
            </span>
          </a>
          <figcaption
            className="slds-file__title slds-file__title_card"
          >
            <div
              className="slds-media__figure slds-line-height_reset"
            >
              <span
                className="slds-icon_container"
              >
                <svg
                  aria-hidden="true"
                  className="slds-icon slds-icon_x-small"
                >
                  <use
                    href="/assets/icons/doctype-sprite/svg/symbols.svg#pdf"
                  />
                </svg>
                
              </span>
            </div>
            <div
              className="slds-media__body"
            >
              <span
                className="slds-file__text slds-truncate"
                title="Proposal.pdf"
              >
                Proposal.pdf
              </span>
            </div>
          </figcaption>
        </figure>
      </div>
    </li>
  </ul>
</div>
`;

exports[`DOM snapshots SLDSFiles w/o Title 1`] = `
<div
  className="slds-p-around_medium"
>
  <ul
    className="slds-grid slds-grid_pull-padded"
    id="files-with-no-title-example"
  >
    <li
      className="slds-p-horizontal_xx-small slds-size_1-of-3 slds-medium-size_1-of-4"
    >
      <div
        className="slds-file slds-file_card"
        id="file-with-no-title"
      >
        <figure>
          <a
            className="slds-file__crop slds-file__crop_16-by-9"
            href="#"
            onClick={[Function]}
          >
            <span
              className="slds-assistive-text"
            >
              Preview:
            </span>
            <img
              alt="Proposal.pdf"
              src="/assets/images/placeholder-img@16x9.jpg"
            />
          </a>
        </figure>
      </div>
    </li>
  </ul>
</div>
`;
